tests/codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.literal.call.string/reader-literal-call-string.mon
;; TEST-ID: tests.codegen.reader-error.reader-literal-call-string
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: expected-fail-compiled
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/tests-infix-calls
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: is a string literal and cannot be called as a function
;; TEST-ATOM: atom.reader.error.reader.literal.call.string
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.literal.call.string
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: is a string literal and cannot be called as a function
;; TEST-READER-PATH: reader.c:1 parser.literal-call
;; TEST-CODEGEN-PATH: diagnostic.parser.literal-call
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1 is a string literal and cannot be called as a function
;; TEST-USES-ATOM: atom.reader.error.reader.literal.call.string
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.literal.call
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/tests-infix-calls/atom.reader.error.reader.literal.call.string
;; TEST-MENU-PATH: codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.literal.call.string
;; TEST-ATOM-LEAF: atom.reader.error.reader.literal.call.string
;; TEST-CLI-TARGET: codegen errors reader tests-infix-calls

(module Main)
(show ("f" 1))
